[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "airtouch2"
description = "API for the monitoring and control of a Polyaire Airtouch 2 system over the local network"
version = "0.7.7"
authors = [{ name = "Nathan Van der Hoek", email = "nathan.vanderhoek@student.adelaide.edu.au" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Embedded Systems"
]
keywords = ["air", "conditioner", "automation"]

[project.urls]
Homepage = "https://github.com/nathanvdh/airtouch2-python"
